--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ python-multipart==0.0.6
 
 # LLM and Language Processing
 langchain==0.0.350
-openai==1.6.1
+langchain-community==0.0.10
+langchain-core==0.1.1
+google-generativeai==0.3.1
 
 # Data handling
 pandas==2.1.4
@@ -16,6 +18,16 @@ statsbombpy==1.10.0
 # Streamlit dependencies
 streamlit==1.29.0
 plotly==5.18.0
+
+# Google AI and API dependencies
+google-api-python-client==2.108.0
+google-auth==2.25.2
+google-auth-httplib2==0.1.1
+google-cloud-aiplatform==1.36.4
+
+# Memory and Chat Models
+chromadb==0.4.18
+tiktoken==0.5.2
 
 # Utilities
 python-dotenv==1.0.0
