--- a/streamlit/requirements.txt
+++ b/streamlit/requirements.txt
@@ -1,7 +1,12 @@
 streamlit==1.29.0
 langchain==0.0.350
+langchain-community==0.0.10
+langchain-core==0.1.1
 python-dotenv==1.0.0
 requests==2.31.0
 pandas==2.1.4
 plotly==5.18.0
 numpy==1.26.2
+openai==1.6.1
+chromadb==0.4.18
+tiktoken==0.5.2
