--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,16 @@
-# FastAPI dependencies
-fastapi==0.105.0
-uvicorn==0.24.0
-pydantic==2.5.2
-python-multipart==0.0.6
-
-# LLM and Language Processing
-langchain==0.0.350
-langchain-community==0.0.10
-langchain-core==0.1.1
-google-generativeai==0.3.1
-
-# Data handling
+# Core dependencies
 pandas==2.1.4
 numpy==1.26.2
 statsbombpy==1.10.0
 
-# Streamlit dependencies
+# API
+fastapi==0.105.0
+uvicorn==0.24.0
+pydantic==2.5.2
+
+# Streamlit
 streamlit==1.29.0
-plotly==5.18.0
-
-# Google AI and API dependencies
-google-api-python-client==2.108.0
-google-auth==2.25.2
-google-auth-httplib2==0.1.1
-google-cloud-aiplatform==1.36.4
-
-# Memory and Chat Models
-chromadb==0.4.18
-tiktoken==0.5.2
 
 # Utilities
 python-dotenv==1.0.0
 requests==2.31.0
-pytest==7.4.3
