--- a/requirements.txt
+++ b/requirements.txt
@@ -4,21 +4,37 @@ numpy==1.26.2
 # API
 fastapi==0.104.1
 uvicorn==0.24.0
-pydantic==2.5.2
+pydantic>=2.7.0  # Atualizado para versão compatível
+pydantic-settings>=2.7.0  # Adicionado explicitamente
 httpx==0.24.1
 statsbombpy==1.10.0
 
 # Streamlit
 streamlit==1.28.2
 
-# Utilities
-python-dotenv==1.0.0
-python-multipart==0.0.6
-langchain==0.0.339
+# LangChain & AI
+langchain>=0.1.0
+langchain-community>=0.0.10
+langchain-core>=0.1.10
+langchain-google-genai>=0.0.3
 google-generativeai==0.3.1
-pandas==2.1.3
-requests==2.31.0
+
+# Data Visualization
+plotly==5.18.0
+altair==5.2.0
+
+# Performance
+aiohttp==3.9.1
+
+# Cache
+requests-cache==1.1.1
 
 # Testing
 pytest>=7.4.3
 pytest-asyncio>=0.21.1
+pytest-cov==4.1.0
+
+# Type checking and linting
+mypy==1.7.1
+black==23.11.0
+isort==5.12.0
