--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,9 @@ statsbombpy==1.10.0
 # Streamlit
 streamlit==1.28.2
 
-# LangChain & AI
-langchain>=0.1.0
-langchain-community>=0.0.10
-langchain-core>=0.1.10
-langchain-google-genai>=0.0.3
-google-generativeai==0.3.1
+# AI & LLM
+openai==1.3.8
+python-dotenv==1.0.0
 
 # Data Visualization
 plotly==5.18.0
